Deidara Run Animation

--- a/deidara.html
+++ b/deidara.html
@@ -5,6 +5,6 @@
 	<link href="deidara.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-	<img class="deidara stance"/>
+	<img class="deidara run"/>
 </body>
 </html>
